--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.26.0
-pandas==2.0.3
-pillow==10.0.0
-requests==2.31.0
-openpyxl==3.1.2
+streamlit>=1.41.1
+pandas>=2.0.3
+pillow>=10.0.0
+requests>=2.31.0
+openpyxl>=3.1.2
